<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/user_bg"
    tools:context=".view.result.ResultActivity">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="16dp"
        android:background="@color/md_theme_light_background"
        android:backgroundTint="@color/user_bg"
        android:src="@drawable/baseline_arrow_back_24"
        android:contentDescription="@string/str_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnUserList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/md_theme_light_background"
        android:src="@drawable/baseline_bookmarks_24"
        android:contentDescription="@string/str_list_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_score"
        android:textSize="48sp"
        android:layout_marginBottom="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tickerView"/>

    <com.robinhood.ticker.TickerView
        android:id="@+id/tickerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="64sp"
        android:textColor="@color/md_theme_dark_inverseOnSurface"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/img_child_end"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tickerView"
        app:layout_constraintStart_toStartOf="@id/tickerView"
        app:layout_constraintEnd_toEndOf="@id/tickerView"
        android:contentDescription="@string/str_image_child" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/str_start_again"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>